fine tuning generator messages, virtual threads, catching errors